change views to fix overlapping

--- a/static/admin/index.css
+++ b/static/admin/index.css
@@ -1,48 +1,48 @@
 h1 {
     position: relative;
-    left: 40%;
     font-family:Palatino Linotype;
     color: red;
+    left: 40%;
 }
 #message {
-    width: 20%;
-    position: absolute;
-    right: 50%;
+    height:20%;
+    position:relative;
     font-family:Book Antiqua;
+
+}
+#restaurantscroll{
+    overflow-y: scroll;
+    max-height: 300px;
+}
+#userscroll
+{    overflow-y: scroll;
+    max-height: 300px;
 }
 #post_news{
-    position: absolute;
-    bottom: 2%;
+    position: relative;
     font-family:Book Antiqua;
 }
 #restaurants {
-    width: 20%;
+    height: 20%;
     overflow: auto;
-    position: absolute;
-    right: 78%;
+    position: relative;
+    left: 0%;
 }
 #users{
-    width: 20%;
+    height: 20%;
     overflow: auto;
-    position: absolute;
-    left: 78%;
+    /*position: relative;*/
 }
 #users h2{
     color: #003399;
     position: relative;
-    padding-top: 10%;
-    padding-bottom: 10%;
 }
 #restaurants h2{
     color :#003399;
     position: relative;
-    padding-top: 10%;
-    padding-bottom: 10%;
 }
 #message h2{
     position: relative;
-    padding-top: 10%;
-    padding-bottom: 10%;
     color: #003399;
 }
 #post_news h2{
@@ -52,12 +52,11 @@ h1 {
     position: relative;
     margin-top: 1%;
     background:#00AA00;
-    left: 94%;
 }
 #send_message_button {
     position: relative;
-    margin-top: 5%;
-    left: 65%;
+    left: 60%;
+    margin-top: 2%;
 }
 #delete_button{
     background: #AA0000;
